docs/api/qiskit/0.29/qiskit.opflow.state_fns.DictStateFn.mdx
---
title: DictStateFn (v0.29)
description: API reference for qiskit.opflow.state_fns.DictStateFn in qiskit v0.29
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.state_fns.DictStateFn
---

# DictStateFn

<Class id="qiskit.opflow.state_fns.DictStateFn" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/opflow/state_fns/dict_state_fn.py" signature="DictStateFn(primitive=None, coeff=1.0, is_measurement=False, from_operator=False)" modifiers="class">
  Bases: `qiskit.opflow.state_fns.state_fn.StateFn`

  A class for state functions and measurements which are defined by a lookup table, stored in a dict.

  **Parameters**

  *   **primitive** (`Union`\[`str`, `dict`, `Result`, `None`]) – The dict, single bitstring (if defining a basis sate), or Qiskit Result, which defines the behavior of the underlying function.
  *   **coeff** (`Union`\[`complex`, `ParameterExpression`]) – A coefficient by which to multiply the state function.
  *   **is\_measurement** (`bool`) – Whether the StateFn is a measurement operator.
  *   **from\_operator** (`bool`) – if True the StateFn is derived from OperatorStateFn. (Default: False)

  **Raises**

  **TypeError** – invalid parameters.

  ## Methods Defined Here

  <span id="qiskit-opflow-state-fns-dictstatefn-add" />

  ### add

  <Function id="qiskit.opflow.state_fns.DictStateFn.add" signature="DictStateFn.add(other)">
    Return Operator addition of self and other, overloaded by `+`.

    **Parameters**

    **other** (`OperatorBase`) – An `OperatorBase` with the same number of qubits as self, and in the same ‘Operator’, ‘State function’, or ‘Measurement’ category as self (i.e. the same type of underlying function).

    **Return type**

    `OperatorBase`

    **Returns**

    An `OperatorBase` equivalent to the sum of self and other.
  </Function>

  <span id="qiskit-opflow-state-fns-dictstatefn-adjoint" />

  ### adjoint

  <Function id="qiskit.opflow.state_fns.DictStateFn.adjoint" signature="DictStateFn.adjoint()">
    Return a new Operator equal to the Operator’s adjoint (conjugate transpose), overloaded by `~`. For StateFns, this also turns the StateFn into a measurement.

    **Return type**

    `DictStateFn`

    **Returns**

    An `OperatorBase` equivalent to the adjoint of self.
  </Function>

  <span id="qiskit-opflow-state-fns-dictstatefn-eval" />

  ### eval

  <Function id="qiskit.opflow.state_fns.DictStateFn.eval" signature="DictStateFn.eval(front=None)">
    Evaluate the Operator’s underlying function, either on a binary string or another Operator. A square binary Operator can be defined as a function taking a binary function to another binary function. This method returns the value of that function for a given StateFn or binary string. For example, `op.eval('0110').eval('1110')` can be seen as querying the Operator’s matrix representation by row 6 and column 14, and will return the complex value at those “indices.” Similarly for a StateFn, `op.eval('1011')` will return the complex value at row 11 of the vector representation of the StateFn, as all StateFns are defined to be evaluated from Zero implicitly (i.e. it is as if `.eval('0000')` is already called implicitly to always “indexing” from column 0).

    If `front` is None, the matrix-representation of the operator is returned.

    **Parameters**

    **front** (`Union`\[`str`, `Dict`\[`str`, `complex`], `ndarray`, `OperatorBase`, `Statevector`, `None`]) – The bitstring, dict of bitstrings (with values being coefficients), or StateFn to evaluated by the Operator’s underlying function, or None.

    **Return type**

    `Union`\[`OperatorBase`, `complex`]

    **Returns**

    The output of the Operator’s evaluation function. If self is a `StateFn`, the result is a float or complex. If self is an Operator (`PrimitiveOp, ComposedOp, SummedOp, EvolvedOp,` etc.), the result is a StateFn. If `front` is None, the matrix-representation of the operator is returned, which is a `MatrixOp` for the operators and a `VectorStateFn` for state-functions. If either self or front contain proper `ListOps` (not ListOp subclasses), the result is an n-dimensional list of complex or StateFn results, resulting from the recursive evaluation by each OperatorBase in the ListOps.
  </Function>

  <span id="qiskit-opflow-state-fns-dictstatefn-permute" />

  ### permute

  <Function id="qiskit.opflow.state_fns.DictStateFn.permute" signature="DictStateFn.permute(permutation)">
    Permute the qubits of the state function.

    **Parameters**

    **permutation** (`List`\[`int`]) – A list defining where each qubit should be permuted. The qubit at index j of the circuit should be permuted to position permutation\[j].

    **Return type**

    `DictStateFn`

    **Returns**

    A new StateFn containing the permuted primitive.
  </Function>

  <span id="qiskit-opflow-state-fns-dictstatefn-primitive-strings" />

  ### primitive\_strings

  <Function id="qiskit.opflow.state_fns.DictStateFn.primitive_strings" signature="DictStateFn.primitive_strings()">
    Return a set of strings describing the primitives contained in the Operator. For example, `{'QuantumCircuit', 'Pauli'}`. For hierarchical Operators, such as `ListOps`, this can help illuminate the primitives represented in the various recursive levels, and therefore which conversions can be applied.

    **Return type**

    `Set`\[`str`]

    **Returns**

    A set of strings describing the primitives contained within the Operator.
  </Function>

  <span id="qiskit-opflow-state-fns-dictstatefn-sample" />

  ### sample

  <Function id="qiskit.opflow.state_fns.DictStateFn.sample" signature="DictStateFn.sample(shots=1024, massive=False, reverse_endianness=False)">
    Sample the state function as a normalized probability distribution. Returns dict of bitstrings in order of probability, with values being probability.

    **Parameters**

    *   **shots** (`int`) – The number of samples to take to approximate the State function.
    *   **massive** (`bool`) – Whether to allow large conversions, e.g. creating a matrix representing over 16 qubits.
    *   **reverse\_endianness** (`bool`) – Whether to reverse the endianness of the bitstrings in the return dict to match Terra’s big-endianness.

    **Return type**

    `Dict`\[`str`, `float`]

    **Returns**

    A dict containing pairs sampled strings from the State function and sampling frequency divided by shots.
  </Function>

  <span id="qiskit-opflow-state-fns-dictstatefn-tensor" />

  ### tensor

  <Function id="qiskit.opflow.state_fns.DictStateFn.tensor" signature="DictStateFn.tensor(other)">
    Return tensor product between self and other, overloaded by `^`. Note: You must be conscious of Qiskit’s big-endian bit printing convention. Meaning, Plus.tensor(Zero) produces a |+⟩ on qubit 0 and a |0⟩ on qubit 1, or |+⟩⨂|0⟩, but would produce a QuantumCircuit like

    > |0⟩– |+⟩–

    Because Terra prints circuits and results with qubit 0 at the end of the string or circuit.

    **Parameters**

    **other** (`OperatorBase`) – The `OperatorBase` to tensor product with self.

    **Return type**

    `OperatorBase`

    **Returns**

    An `OperatorBase` equivalent to the tensor product of self and other.
  </Function>

  <span id="qiskit-opflow-state-fns-dictstatefn-to-circuit-op" />

  ### to\_circuit\_op

  <Function id="qiskit.opflow.state_fns.DictStateFn.to_circuit_op" signature="DictStateFn.to_circuit_op()">
    Convert this state function to a `CircuitStateFn`.

    **Return type**

    `OperatorBase`
  </Function>

  <span id="qiskit-opflow-state-fns-dictstatefn-to-density-matrix" />

  ### to\_density\_matrix

  <Function id="qiskit.opflow.state_fns.DictStateFn.to_density_matrix" signature="DictStateFn.to_density_matrix(massive=False)">
    Return matrix representing product of StateFn evaluated on pairs of basis states. Overridden by child classes.

    **Parameters**

    **massive** (`bool`) – Whether to allow large conversions, e.g. creating a matrix representing over 16 qubits.

    **Return type**

    `ndarray`

    **Returns**

    The NumPy array representing the density matrix of the State function.

    **Raises**

    **ValueError** – If massive is set to False, and exponentially large computation is needed.
  </Function>

  <span id="qiskit-opflow-state-fns-dictstatefn-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.opflow.state_fns.DictStateFn.to_matrix" signature="DictStateFn.to_matrix(massive=False)">
    Return NumPy representation of the Operator. Represents the evaluation of the Operator’s underlying function on every combination of basis binary strings. Warn if more than 16 qubits to force having to set `massive=True` if such a large vector is desired.

    **Return type**

    `ndarray`

    **Returns**

    The NumPy `ndarray` equivalent to this Operator.
  </Function>

  <span id="qiskit-opflow-state-fns-dictstatefn-to-spmatrix" />

  ### to\_spmatrix

  <Function id="qiskit.opflow.state_fns.DictStateFn.to_spmatrix" signature="DictStateFn.to_spmatrix()">
    Same as to\_matrix, but returns csr sparse matrix.

    **Return type**

    `spmatrix`

    **Returns**

    CSR sparse matrix representation of the State function.

    **Raises**

    **ValueError** – invalid parameters.
  </Function>

  <span id="qiskit-opflow-state-fns-dictstatefn-to-spmatrix-op" />

  ### to\_spmatrix\_op

  <Function id="qiskit.opflow.state_fns.DictStateFn.to_spmatrix_op" signature="DictStateFn.to_spmatrix_op()">
    Convert this state function to a `SparseVectorStateFn`.

    **Return type**

    `OperatorBase`
  </Function>

  ## Attributes

  ### INDENTATION

  <Attribute id="qiskit.opflow.state_fns.DictStateFn.INDENTATION" attributeValue="'  '" />

  ### coeff

  <Attribute id="qiskit.opflow.state_fns.DictStateFn.coeff">
    A coefficient by which the state function is multiplied.

    **Return type**

    `Union`\[`complex`, `ParameterExpression`]
  </Attribute>

  ### instance\_id

  <Attribute id="qiskit.opflow.state_fns.DictStateFn.instance_id">
    Return the unique instance id.

    **Return type**

    `int`
  </Attribute>

  ### is\_measurement

  <Attribute id="qiskit.opflow.state_fns.DictStateFn.is_measurement">
    Whether the StateFn object is a measurement Operator.

    **Return type**

    `bool`
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.opflow.state_fns.DictStateFn.num_qubits">
    **Return type**

    `int`
  </Attribute>

  ### parameters

  <Attribute id="qiskit.opflow.state_fns.DictStateFn.parameters" />

  ### primitive

  <Attribute id="qiskit.opflow.state_fns.DictStateFn.primitive" attributeTypeHint="Dict[str, complex]">
    The primitive which defines the behavior of the underlying State function.
  </Attribute>

  ### settings

  <Attribute id="qiskit.opflow.state_fns.DictStateFn.settings">
    Return settings.

    **Return type**

    `Dict`
  </Attribute>
</Class>

